--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,11 @@
     <script src="components/list-generator.js"></script>
   </head>
   <body>
-    <!-- <button onclick="googleLogin()">Log in with Google</button> -->
-    <snow-list-generator></snow-list-generator>
-    <div class="lists-wrapper"></div>
+    <div class="page-content">
+      <!-- <button onclick="googleLogin()">Log in with Google</button> -->
+      <snow-list-generator class="list-generator"></snow-list-generator>
+      <div class="lists-wrapper"></div>
+    </div>
 
 
   <script src="scripts/app.js"></script>
