--- a/public/index.html
+++ b/public/index.html
@@ -4,18 +4,22 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Welcome to Firebase Hosting</title>
-
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/7.5.0/firebase-app.js"></script>
+    <!-- initialize the SDK after all desired features are loaded -->
+    <script defer src="/__/firebase/init.js"></script>
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <link rel="stylesheet" href="css/base-styles.css">
+
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+
     <!-- include only the Firebase features as you need -->
     <script defer src="/__/firebase/7.5.0/firebase-auth.js"></script>
     <script defer src="/__/firebase/7.5.0/firebase-firestore.js"></script>
     <script defer src="/__/firebase/7.5.0/firebase-messaging.js"></script>
     <script defer src="/__/firebase/7.5.0/firebase-storage.js"></script>
-    <!-- initialize the SDK after all desired features are loaded -->
-    <script defer src="/__/firebase/init.js"></script>
-
-    <link rel="stylesheet" href="css/base-styles.css">
     <script src="components/list.js"></script>
     <script src="components/list-generator.js"></script>
   </head>
@@ -24,9 +28,8 @@
       <!-- <button onclick="googleLogin()">Log in with Google</button> -->
       <snow-list-generator class="list-generator"></snow-list-generator>
       <div class="lists-wrapper"></div>
+      
     </div>
-
-
   <script src="scripts/app.js"></script>
   </body>
 </html>
