Added dynamic "no results" message

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <div class="page-content">
       <!-- <button onclick="googleLogin()">Log in with Google</button> -->
       <snow-list-generator class="list-generator"></snow-list-generator>
-      <div class="lists-wrapper"></div>
+      <div class="lists-wrapper">Get started by adding a list.</div>
       
     </div>
   <script src="scripts/app.js"></script>
